[gd_scene load_steps=11 format=3 uid="uid://dbujavjfviy6o"]

[ext_resource type="Script" path="res://player/player.gd" id="1_2burc"]
[ext_resource type="Texture2D" uid="uid://whp6ig67jsmo" path="res://assets/sprites/FLYsheet_7_scaled.png" id="2_njkjn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lje34"]
atlas = ExtResource("2_njkjn")
region = Rect2(1620, 0, 324, 324)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hicf"]
atlas = ExtResource("2_njkjn")
region = Rect2(324, 0, 324, 324)

[sub_resource type="AtlasTexture" id="AtlasTexture_ys78u"]
atlas = ExtResource("2_njkjn")
region = Rect2(648, 0, 324, 324)

[sub_resource type="AtlasTexture" id="AtlasTexture_6it2d"]
atlas = ExtResource("2_njkjn")
region = Rect2(324, 0, 324, 324)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ab7g"]
atlas = ExtResource("2_njkjn")
region = Rect2(972, 0, 324, 324)

[sub_resource type="AtlasTexture" id="AtlasTexture_bw1dy"]
atlas = ExtResource("2_njkjn")
region = Rect2(1296, 0, 324, 324)

[sub_resource type="SpriteFrames" id="SpriteFrames_eg223"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lje34")
}],
"loop": false,
"name": &"default",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hicf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ys78u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6it2d")
}],
"loop": false,
"name": &"flap_L",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ab7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bw1dy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ab7g")
}],
"loop": false,
"name": &"flap_R",
"speed": 24.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_63ptv"]
radius = 61.2046

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_mask = 7
script = ExtResource("1_2burc")

[node name="SpriteAnimated" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_eg223")
offset = Vector2(3, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_63ptv")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-0.499999, -8.10623e-06)
scale = Vector2(6.45, 6.5)

[node name="TimeAfterDeath" type="Timer" parent="."]
wait_time = 0.3

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="TimeAfterDeath" to="." method="_on_time_after_death_timeout"]
